fix(04): revise plans based on checker feedback
Plan 04-05:
- Added messageStore.ts to files_modified
- Added explicit Task 2 for connectionStatus in store
- Updated truths to be user-centric
- Clarified useMessaging → messageStore wiring

Plan 04-06:
- Expanded relogin implementation details
- Added error handling and full API call pattern

--- a/.planning/phases/04-ui-polish-production-readiness/04-05-PLAN.md
+++ b/.planning/phases/04-ui-polish-production-readiness/04-05-PLAN.md
@@ -7,16 +7,26 @@ depends_on: ["04-02"]
 files_modified:
   - frontend/src/components/error/ConnectionBanner.tsx
   - frontend/src/components/layout/AppShell.tsx
+  - frontend/src/stores/messageStore.ts
   - frontend/src/lib/websocket/useMessaging.ts
   - frontend/src/lib/api.ts
 autonomous: true
 
 must_haves:
   truths:
-    - "WebSocket disconnect shows subtle connection banner"
+    - "User sees connection status indicator when offline"
     - "API errors show toast notifications"
-    - "Failed message sends show retry option"
-    - "Connection banner auto-hides when reconnected"
+    - "Connection indicator auto-hides when reconnected"
+  artifacts:
+    - path: "frontend/src/components/error/ConnectionBanner.tsx"
+      provides: "Persistent connection state banner"
+      exports: ["ConnectionBanner"]
+    - path: "frontend/src/stores/messageStore.ts"
+      provides: "Message store with connection status tracking"
+      contains: "connectionStatus"
+    - path: "frontend/src/lib/api.ts"
+      provides: "API client with toast error handling"
+      contains: "showApiError"
   artifacts:
     - path: "frontend/src/components/error/ConnectionBanner.tsx"
       provides: "Persistent connection state banner"
@@ -113,43 +123,52 @@ Output: Connection banner for WebSocket state, toast integration for API errors,
 </task>
 
 <task type="auto">
-  <name>Task 2: Integrate ConnectionBanner into AppShell</name>
+  <name>Task 2: Add connectionStatus to messageStore</name>
+  <files>frontend/src/stores/messageStore.ts</files>
+  <action>
+    Update messageStore to track WebSocket connection status.
+
+    Add to MessageState interface and store:
+    ```typescript
+    interface MessageState {
+      // ... existing fields
+      connectionStatus: 'connected' | 'connecting' | 'disconnected'
+      setConnectionStatus: (status: 'connected' | 'connecting' | 'disconnected') => void
+    }
+
+    export const useMessageStore = create<MessageState>((set) => ({
+      // ... existing fields
+      connectionStatus: 'connecting',
+      setConnectionStatus: (status) => set({ connectionStatus: status }),
+    }))
+    ```
+
+    This enables AppShell to read connection status without depending on useMessaging hook.
+  </action>
+  <verify>TypeScript compiles: cd frontend && npx tsc --noEmit</verify>
+  <done>messageStore exports connectionStatus state and setter</done>
+</task>
+
+<task type="auto">
+  <name>Task 3: Integrate ConnectionBanner into AppShell</name>
   <files>frontend/src/components/layout/AppShell.tsx</files>
   <action>
-    Add ConnectionBanner to AppShell, driven by WebSocket connection state.
+    Add ConnectionBanner to AppShell, reading connection state from messageStore.
 
     Changes:
     1. Import ConnectionBanner from '@/components/error/ConnectionBanner'
-    2. Get connection status from a suitable source (useMessaging or a shared store)
-    3. Render ConnectionBanner at top of main content area
+    2. Import useMessageStore from '@/stores/messageStore'
+    3. Read connectionStatus from store
+    4. Render ConnectionBanner at top of layout
 
-    Since useMessaging returns isConnected, we need to expose connection state.
-    Option: Create a simple connectionStore or pass through context.
-
-    For simplicity, use the existing pattern - check if WebSocket is connected.
-    Add to messageStore or create connectionStore:
-
-    ```tsx
-    // In AppShell, get connection status
-    // If useMessaging is only used in MessagesPage, we need shared state
-    // Solution: Create a minimal connection status in a shared store
-
-    // For now, use a simpler approach:
-    // Add connection status to messageStore (it already has WebSocket logic awareness)
-    ```
-
-    Actually, the cleanest approach:
-    1. Add `connectionStatus` to messageStore (set by useMessaging)
-    2. Read from messageStore in AppShell
-
-    In AppShell:
+    Implementation:
     ```tsx
     import { ConnectionBanner } from '@/components/error/ConnectionBanner'
     import { useMessageStore } from '@/stores/messageStore'
 
     export function AppShell({ children }: AppShellProps) {
       const connectionStatus = useMessageStore((s) => s.connectionStatus)
-      // ...
+      // ... existing isMobile, call state logic ...
 
       return (
         <>
@@ -158,27 +177,30 @@ Output: Connection banner for WebSocket state, toast integration for API errors,
 
           {/* Existing call banners */}
           {showIncomingCall && <IncomingCallBanner ... />}
-          ...
+          {showActiveCall && <ActiveCallWindow ... />}
+
+          <div className="flex h-screen overflow-hidden">
+            {/* ... rest of layout */}
+          </div>
+
+          {isMobile && <BottomNav />}
         </>
       )
     }
     ```
-
-    Also update messageStore to track connectionStatus: 'connected' | 'connecting' | 'disconnected'
-    (default to 'connecting' until first connection)
   </action>
   <verify>TypeScript compiles: cd frontend && npx tsc --noEmit</verify>
   <done>ConnectionBanner shows at top of AppShell when disconnected</done>
 </task>
 
 <task type="auto">
-  <name>Task 3: Add toast notifications for API and WebSocket errors</name>
+  <name>Task 4: Add toast notifications and connection status updates</name>
   <files>
     frontend/src/lib/api.ts
     frontend/src/lib/websocket/useMessaging.ts
   </files>
   <action>
-    Integrate toast notifications into error handling.
+    Integrate toast notifications and connection status updates.
 
     1. In api.ts, add toast for non-401 errors:
     ```typescript
@@ -198,39 +220,52 @@ Output: Connection banner for WebSocket state, toast integration for API errors,
     }
     ```
 
-    2. In useMessaging.ts, add toast for connection events:
+    2. In useMessaging.ts, update connection status in messageStore and add toasts:
     ```typescript
     import { toast } from '@/lib/toast'
+    import { useMessageStore } from '@/stores/messageStore'
 
-    // On reconnection success (after being disconnected):
-    if (wasDisconnected && nowConnected) {
-      toast.success('Connected')
+    // When WebSocket connects successfully:
+    const setConnectionStatus = useMessageStore.getState().setConnectionStatus
+
+    // On open:
+    ws.onopen = () => {
+      const wasDisconnected = useMessageStore.getState().connectionStatus === 'disconnected'
+      setConnectionStatus('connected')
+      if (wasDisconnected) {
+        toast.success('Connected')
+      }
     }
 
-    // On disconnect after 3 failed attempts:
-    toast.error('Connection lost. Will keep trying...')
+    // On close/error:
+    ws.onclose = () => {
+      setConnectionStatus('disconnected')
+    }
+
+    // During reconnection attempts:
+    setConnectionStatus('connecting')
     ```
 
-    Keep toasts minimal - don't toast every state change.
-    Only toast on:
-    - Successful reconnection after disconnect
-    - Giving up on reconnection (if applicable)
+    Keep toasts minimal - only toast on:
+    - Successful reconnection after being disconnected
     - API errors (except 401)
   </action>
   <verify>cd frontend && npm run build (compiles successfully)</verify>
-  <done>Toast notifications appear for API errors and connection recovery</done>
+  <done>Toast notifications appear for API errors, connection status updates messageStore</done>
 </task>
 
 </tasks>
 
 <verification>
 1. cd frontend && npx tsc --noEmit
-2. grep "ConnectionBanner" frontend/src/components/layout/AppShell.tsx
-3. grep "showApiError\|toast" frontend/src/lib/api.ts
-4. grep "toast" frontend/src/lib/websocket/useMessaging.ts
+2. grep "connectionStatus" frontend/src/stores/messageStore.ts
+3. grep "ConnectionBanner" frontend/src/components/layout/AppShell.tsx
+4. grep "showApiError\|toast" frontend/src/lib/api.ts
+5. grep "setConnectionStatus" frontend/src/lib/websocket/useMessaging.ts
 </verification>
 
 <success_criteria>
+- messageStore tracks connectionStatus
 - ConnectionBanner shows when WebSocket disconnected
 - ConnectionBanner auto-hides when reconnected
 - API errors show toast notifications
