--- a/.planning/phases/04-ui-polish-production-readiness/04-06-PLAN.md
+++ b/.planning/phases/04-ui-polish-production-readiness/04-06-PLAN.md
@@ -89,22 +89,39 @@ Output: SessionExpiredModal for re-authentication and improved token refresh flo
     }))
     ```
 
-    Also add a relogin action that:
-    1. Calls login API
-    2. Updates user and accessToken
-    3. Sets sessionExpired to false
+    Also add a relogin action that mirrors the existing login logic:
+    1. Calls the same login API endpoint
+    2. Updates localStorage with new accessToken
+    3. Updates user state
+    4. Sets sessionExpired to false to close modal
 
     ```typescript
     relogin: async (email: string, password: string) => {
-      const response = await authApi.login(email, password)
-      localStorage.setItem('accessToken', response.accessToken)
+      // Use same API endpoint as regular login
+      const response = await fetch('/api/auth/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ email, password }),
+        credentials: 'include', // For refresh token cookie
+      })
+
+      if (!response.ok) {
+        const error = await response.json().catch(() => ({ message: 'Login failed' }))
+        throw new Error(error.error || error.message || 'Login failed')
+      }
+
+      const data = await response.json()
+      localStorage.setItem('accessToken', data.accessToken)
       set({
-        user: response.user,
+        user: data.user,
         isAuthenticated: true,
-        sessionExpired: false,
+        sessionExpired: false, // This closes the modal
       })
     }
     ```
+
+    The key difference from regular login is that relogin sets sessionExpired to false,
+    which causes the modal to unmount and the user to continue where they left off.
   </action>
   <verify>TypeScript compiles: cd frontend && npx tsc --noEmit</verify>
   <done>Auth store has sessionExpired state and relogin action</done>
